[package]
name = "axum_web3_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
async-graphql = "7.0"
async-graphql-axum = "7.0"
serde_json = "1.0"
hyper = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
